--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="sign_up_black">#191919</color>
     <color name="find_password_blue">#35B2CD</color>
     <color name="first_time_in_ia">#767676</color>
+    <color name="selector_unchecked">#EAEAEA</color>
 </resources>
