--- a/presentation/src/main/res/layout/activity_authentication_failed_page.xml
+++ b/presentation/src/main/res/layout/activity_authentication_failed_page.xml
@@ -118,12 +118,12 @@
 
     <ImageView
         android:id="@+id/iv_authentication_failed_icon"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/lg_authentication_failed_icon"
         app:layout_constraintBottom_toBottomOf="@id/g_authentication_failed_b"
-        app:layout_constraintEnd_toEndOf="@id/g_authentication_failed_e"
-        app:layout_constraintStart_toStartOf="@id/g_authentication_failed_s"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/g_authentication_failed_t" />
 
     <TextView
